<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignIn">

    <TextView
        android:id="@+id/signIn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signIn_text"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.065" />

    <EditText
        android:id="@+id/signIn_email_field"
        android:layout_width="367dp"
        android:layout_height="50dp"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/signUp_email_text"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_attach_email_24"
        android:drawableTint="@color/gray"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_text"
        app:layout_constraintVertical_bias="0.492"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/signIn_password_field"
        android:layout_width="368dp"
        android:layout_height="48dp"
        android:drawableStart="@drawable/ic_baseline_https_24"
        android:drawableTint="@color/gray"
        android:background="@drawable/edit_text_background"
        android:ems="10"
        android:hint="@string/signUp_password_text"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_email_field"
        app:layout_constraintVertical_bias="0.073" />

    <Button
        android:id="@+id/signIn_button"
        android:layout_width="359dp"
        android:layout_height="51dp"
        android:text="@string/logIn_text"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_password_field"
        app:layout_constraintVertical_bias="0.4" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="115dp"
        android:layout_height="88dp"
        app:layout_constraintBottom_toTopOf="@+id/signIn_email_field"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_text"
        app:layout_constraintVertical_bias="0.274"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Don't have an account?"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.288"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signIn_button"
        app:layout_constraintVertical_bias="0.156" />

    <TextView
        android:id="@+id/signUp_text_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="80dp"
        android:text="@string/signUp_text"
        android:textStyle="bold"
        android:textSize="16sp"
        android:clickable="true"
        android:textColor="@color/purple_700"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toEndOf="@+id/textView" />

</androidx.constraintlayout.widget.ConstraintLayout>